
24/06/2002
[C]- .mangrc changed to .tomenetrc
[C]- Chardump ability in the char screen

25/06/2002 (Jir)
- SKILL_SPELLRAD('Revelation') (oh, sry DG, it's last one :)
- race/class additions/deletions can be done without client update.
- p_ptr->skill_last_level removed.
[B] classname.prf file wasn't read correctly.

26/06/2002 (Jir)
- skill-requirements for spells revised.
[B] choose_race/choose_class still used MAX_* (and not Setup.max_*)
[B] '%' skill modifications by race weren't reflected.
[B] p_ptr->u_attr[] was broken (Something should be wrong in Net_setup!)
[C] '-f' option added (use specified file in place of '.tomenet')
[H] Speed bonus for Martial-arts is reduced by total_weight.


** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack and rebalancement :)
** [P] stands for Porting from ToME.

=============================================================================
things to do before 4.0.0

- make NO_TELE radius-based
- implement guest-account
- rebalance skill-points
- adjust depth for ball-type trap
- fix gfx
- refine pk code
- source-code cleanup
- export configurable things to tomenet.cfg
- a spoonful of documentation for skill system

(multi-dungeon, multi-town, terrains, pets etc. are put off after 4.0.0 ...)


=============================================================================
concisely: what's hot now?

- multiple-dungeons stuff
  + we should preserve level_up_y etc. for manually-added dungeons/towers.
- quest system
- skill system
  + SKILL_CLIMB
  + spell_info should be redone
  + bare-handed combat?
- LUA hook
- csfunc
- alignment (let's wait for EE :)
- item stacking

=============================================================================
below this line are the unfixed bugs known:

[B] House doors still seem to crash sometimes. (door even vanishes??)
[B] wpos display hides wound states(eg.'Deep Gash')
[B] ever-charging arts (eg.star)
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)