@@ -7,7 +7,7 @@
 # You should manually write the total # of rumous (lines - 10).
 
 N:*:Default
-632
+634
 They say that you can't trust rumors.
 You have no more Black Potions of Death.
 They say that smart guys hang around at 1600'.
@@ -640,5 +640,7 @@ They say that jump over the doors and everything's fine.
 They say that if you find a long and straight corridor, just don't walk in.
 They say that you cannot master martial arts really without learning to dodge.
 (AD) Purchase the Gazette and you'll never miss the trend!
+They say that you can't teach an old dog new tricks.
+Lifelong study is nice thing, but start training when lv50 isn't so cool idea.
 They say that 
 They say that 
